Javascript replaced by more concise jQuery

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
   <title>JS Example</title>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 <body>
   <ul id="main-menu" class="menu">
@@ -30,6 +31,6 @@
     </li>
     
     <div class="clearfix"></div>
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
 </body>
 </html>
